--- a/index.html
+++ b/index.html
@@ -39,126 +39,78 @@
     </div>
     <!-- 侧导航栏 -->
     <div class="subnav-hd">
-        <h4>离校/返校</h4>
+        <h4>Forum</h4>
     </div>
     <div class="subnav-body">
         <li>
-            <a href="lixiaoshenqing.html">
+            <a href="Feelings.html">
                 <span class="icon-img"><img src="images/iconlixiao.png" alt=""></span>
-                <span>离校申请</span>
+                <span>Feelings</span>
             </a>
         </li>
         <li>
-            <a href="text.html">
-                <span class="icon-img"><img src="images/iconfanxiao.png" alt=""></span>
-                <span>返校报备</span>
+            <a href="Consulations.html">
+                <span class="icon-img"><img src="images/iconqiandao.png" alt=""></span>
+                <span>Consulations</span>
             </a>
         </li>
-        <li></li>
+        <li>
+            <a href="Contacts.html">
+                <span class="icon-img"><img src="images/iconkechengtongzhi.png" alt=""></span>
+                <span>Making Friends</span>
+            </a>
+        </li>
         <li></li>
     </div>
     <div class="subnav-hd">
-        <h4>校园服务</h4>
+        <h4>YunShan Market</h4>
     </div>
     <div class="subnav-body">
         <li>
-            <a href="#">
+            <a href="YunShan Market.html">
                 <span class="icon-img"><img src="images/iconhuodong.png" alt=""></span>
-                <span>活动报名</span>
+                <span>Sellings</span>
             </a>
         </li>
-        <li></li>
-        <li></li>
+        <li>
+            <a href="YunShanService.html">
+                <span class="icon-img"><img src="images/iconwenjuan.png" alt=""></span>
+                <span>Services</span>
+            </a>
+        
+        </li>
+        <li>
+            <a href="YunShanSelective.html">
+                <span class="icon-img"><img src="images/iconhuodong.png" alt=""></span>
+                <span>YunShan Selective</span>
+            </a>
+        </li>
         <li></li>
     </div>
     <div class="subnav-hd" >
-        <h4>日常管理</h4>
+        <h4>Bulletin Board</h4>
     </div>
     <div class="subnav-body">
         <li>
-            <a href="#">
-                <span class="icon-img"><img src="images/iconqiandao.png" alt=""></span>
-                <span>签到</span>
+            <a href="bboard.html">
+                <span class="icon-img"><img src="images/iconlixiao.png" alt=""></span>
+                <span>Notifications</span>
             </a>
         </li>
         <li>
-            <a href="lixiaoshenqing.html">
+            <a href="bboard.html">
                 <span class="icon-img"><img src="images/iconqingjia.png" alt=""></span>
-                <span>请假</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span class="icon-img"><img src="images/iconwenjuan.png" alt=""></span>
-                <span>问卷</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span class="icon-img"><img src="images/icontongzhi.png" alt=""></span>
-                <span>通知</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span class="icon-img"><img src="images/iconjiaqiliuxiao.png" alt=""></span>
-                <span>假期留校申请</span>
+                <span>Lost&Found
+                </span>
             </a>
         </li>
         <li></li>
         <li></li>
         <li></li>
+    </div>
+    <div style="margin-top: 20px; padding-top: 10px;">
     </div>
 
-    <div class="subnav-hd">
-        <h4>疫情防控</h4>
-    </div>
-    <div class="subnav-body">
-        <li>
-            <a href="#">
-                <span class="icon-img"><img src="images/rijianribao.png" alt=""></span>
-                <span>日检日报</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span class="icon-img"><img src="images/iconjiankangdaka.png" alt=""></span>
-                <span>健康打卡</span>
-            </a>
-        </li>
-        <li></li>
-        <li></li>
-    </div>
-    <div class="subnav-hd">
-        <h4>校园课程</h4>
-    </div>
-    <div class="subnav-body">
-        <li>
-            <a href="#">
-                <span class="icon-img"><img src="images/iconwodekecheng.png" alt=""></span>
-                <span>我的课程</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span class="icon-img"><img src="images/iconkechengtongzhi.png" alt=""></span>
-                <span>课程通知</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span class="icon-img"><img src="images/kechengqiandao.png" alt=""></span>
-                <span>课程签到</span>
-            </a>
-        </li>
-        <li>
-        </li>
-        <li>
-        </li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </div>
 </div>
     <div id="bottomToolbar">
         <div class="last">
