--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li>
             <a href="Consulations.html">
                 <span class="icon-img"><img src="images/iconqiandao.png" alt=""></span>
-                <span>Consulations</span>
+                <span>Consultations</span>
             </a>
         </li>
         <li>
